gradle-cache-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: build-cache-node
  namespace: build-cache
  labels:
    app.kubernetes.io/part-of: gradle-enterprise
    app.kubernetes.io/component: build-cache-node
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: gradle-enterprise
      app.kubernetes.io/component: build-cache-node
  serviceName: build-cache-node
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: gradle-enterprise
        app.kubernetes.io/component: build-cache-node
    spec:
      containers:
      - name: build-cache-node
        image: gradle/build-cache-node:19.0
        args: [ "start" ]
        ports:
        - containerPort: 5071
        resources:
          requests:
            memory: 1Gi
            cpu: 0.5
          limits:
            memory: 2Gi
            cpu: 1.5
        volumeMounts:
        - mountPath: /data
          name: build-cache-node-data-volume
        - name: build-cache-config-dir
          mountPath: /data/conf
      volumes:
      - name: build-cache-node-data-volume
        azureFile:
          secretName: azure-build-cache-secret
          shareName: build-cache
          readOnly: false
      - name: build-cache-config-dir
        emptyDir: {}
      - name: tmp-build-cache-config-file
        secret:
          secretName: gradle-build-cache-config-secret
