service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-cache-node
  namespace: build-cache
spec:
  selector:
    app.kubernetes.io/part-of: gradle-enterprise
    app.kubernetes.io/component: build-cache-node 
  ports:
  - name: build-cache-node
    port: 5071
