ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: build-cache-node-ingress
  namespace: build-cache
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: build-cache-node
              port: 
                number: 5071
